update portfolio index

--- a/Assingment.html
+++ b/Assingment.html
@@ -116,7 +116,7 @@
         border-radius: 10px;
     }
 
-    /<*******320**********>*/
+
     @media all and (max-width: 320px){
         main>section>h1{
             font-size: 8em;
@@ -554,7 +554,7 @@
             <section>
                 <aside>
                     <h3>Assignment 7</h3>
-                    <img src="assets/images/A07.jpeg">
+                    <img src="assets/images/A07.png">
                 </aside>
 
                 <div>
@@ -563,7 +563,7 @@
                         01.Transition
                     </p>
 
-                    <a href="../assignments/CSS/Transition/Case1/index.html" target="_blank">Assignments 07</a>
+                    <a href="Assignments/CSS/transition/case1/index.html" target="_blank">Assignments 07</a>
 
                     <h4>Technologies</h4>
                 </div>
@@ -572,7 +572,7 @@
             <section>
                 <aside>
                     <h3>Assignment 8</h3>
-                    <img src="assets/images/A08.jpeg">
+                    <img src="assets/images/A08.png">
                 </aside>
 
                 <div>
@@ -580,7 +580,7 @@
                     <p>
                         01.Transition
                     </p>
-                    <a href="../assignments/CSS/Transition/Case2/index.html" target="_blank">Assignments 08</a>
+                    <a href="Assignments/CSS/transition/case_2/index.html" target="_blank">Assignments 08</a>
 
                     <h4>Technologies</h4>
                 </div>
@@ -590,13 +590,13 @@
             <section>
                 <aside>
                     <h3>Assignment 9</h3>
-                    <img src="assets/images/A7.jpeg">
+                    <img src="assets/images/A09.png">
                 </aside>
 
                 <div>
                     <h4> My Project About</h4>
                     <p>01. Transition.</p>
-                    <a href="../assignments/CSS/Transition/Case3/index.html" target="_blank">Assignments 09</a>
+                    <a href="Assignments/CSS/transition/case_3/index.html" target="_blank">Assignments 09</a>
 
                     <h4>Technologies</h4>
                 </div>
@@ -605,15 +605,13 @@
             <section>
                 <aside>
                     <h3>Assignment 10</h3>
-                    <img src="assets/img/A8.jpeg">
+                    <img src="assets/images/A10.png">
                 </aside>
 
                 <div>
                     <h4> My Project About</h4>
                     <p>01. Ttransition </p>
-                    <a href="../assignments/CSS/Transition/Case4/index.html" target="_blank">Assignments 10</a>
-
-                    <h4>Technologies</h4>
+                    <a href="Assignments/CSS/transition/case_4/index.html" target="_blank">Assignments 10</a>
                 </div>
             </section>
         </section>
@@ -621,32 +619,29 @@
             <section>
                 <aside>
                     <h3>Assignment 11</h3>
-                    <img src="assets/img/A9.jpeg">
+                    <img src="assets/images/A11.png">
                 </aside>
 
                 <div>
                     <h4> My Project About</h4>
                     <p>01. Css grid layout<br>
                         02. using image </p>
-                    <a href="../assignments/CSS/Animations/Case1/index.html" target="_blank">Assignments 11</a>
-
-                    <h4>Technologies</h4>
+                    <a href="Assignments/CSS/animation/case1/index.html" target="_blank">Assignments 11</a>
                 </div>
             </section>
 
             <section>
                 <aside>
                     <h3>Assignment 12</h3>
-                    <img src="assets/img/A10.jpeg">
+                    <img src="assets/images/A12.png">
                 </aside>
 
                 <div>
                     <h4> My Project About</h4>
                     <p>01. Css grid layout<br>
                         02. using image </p>
-                    <a href="../assignments/CSS/Animations/Case2/index.html" target="_blank">Assignments 12</a>
+                    <a href="Assignments/CSS/animation/case2/index.html" target="_blank">Assignments 12</a>
 
-                    <h4>Technologies</h4>
                 </div>
             </section>
         </section>
@@ -654,30 +649,29 @@
             <section>
                 <aside>
                     <h3>Assignment 13</h3>
-                    <img src="assets/img/A11.jpeg">
+                    <img src="assets/images/A13.png">
                 </aside>
 
                 <div>
                     <h4> My Project About</h4>
                     <p>01. Css grid layout<br>
                         02. using image </p>
-                    <a href="../assignments/CSS/Animations/Case3/index.html" target="_blank">Assignments 13</a>
+                    <a href="Assignments/CSS/animation/case3/index.html" target="_blank">Assignments 13</a>
 
-                    <h4>Technologies</h4>
                 </div>
             </section>
 
             <section>
                 <aside>
                     <h3>Assignment 14</h3>
-                    <img src="assets/img/A12.jpeg">
+                    <img src="assets/images/A14.png">
                 </aside>
 
                 <div>
                     <h4> My Project About</h4>
                     <p>01. Css grid layout<br>
                         02. using image </p>
-                    <a href="../assignments/CSS/Animations/Case4/index.html" target="_blank">Assignments 14</a>
+                    <a href="Assignments/CSS/animation/case4/index.html" target="_blank">Assignments 14</a>
 
                     <h4>Technologies</h4>
                 </div>
