update index file

--- a/Assingment.html
+++ b/Assingment.html
@@ -6,9 +6,10 @@
     <link rel="icon" href="assets/img/ass.png">
     <meta name="keywords" content="Myportfolio">
     <meta name="description"content="Specifies relationships between the current document and an external resource. This element is most commonly used to link to CSS, but is also used to establish site icons">
-    <meta name="owner" content="chathurya">
-    <meta name="author" content="thekshana">
+    <meta name="owner" content="Dilshan">
+    <meta name="author" content="DilshanSandaruwan">
     <meta name="theme-color" content="red">
+
 </head>
 <style>
     body {
