update index file

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <img src="assets/images/Portfolio.png">
         <nav>
                 <ul>
-                    <li><i class="fa-solid fa-house"></i> <a href="#"> Home</a> </li>
-                    <li><i class="fa-brands fa-servicestack"></i> <a href="#"> About </a></li>
-                    <li><i class="fa-solid fa-address-book"></i> <a href="#"> Education </a></li>
-                    <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Gallery </a></li>
-                    <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Projects</a></li>
-                    <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Contact </a></li>
+                    <li><i class="fa-solid fa-house"></i><a href="#"> Home</a></li>
+                    <li><i class="fa-brands fa-servicestack"></i> <a href="#whoIam"> About </a></li>
+                    <li><i class="fa-solid fa-address-book"></i> <a href="#education"> Education </a></li>
+                    <li><i class="fa-solid fa-circle-info"></i> <a href="#gallery"> Gallery </a></li>
+                    <li><i class="fa-solid fa-circle-info"></i> <a href="#myProjects"> Projects</a></li>
+                    <li><i class="fa-solid fa-circle-info"></i> <a href="#contact"> Contact </a></li>
                 </ul>
         </nav>
     </header>
@@ -71,15 +71,15 @@
 
         </section>
 
-        <section id="section02">
+        <section  id="section02">
 
-            <img src="assets/images/whoIam.png">
+            <img id="whoIam" src="assets/images/whoIam.png">
 
             <section>
 
             <pre style="font-family: Roboto Serif">
 
-                <img src="assets/images/who_Im_text.png">
+                <img  src="assets/images/who_Im_text.png">
 
                 I am Dilshan. A student of Graduate Diploma in Software Engineering
 
@@ -112,7 +112,7 @@
         </section>
 
         <section id="section03">
-            <img src="assets/images/Vector3.png">
+            <img id="education" src="assets/images/Vector3.png">
             <img src="assets/images/educationText.png">
 
             <div>
@@ -152,7 +152,7 @@
         </section>
 
         <section id="section4">
-            <img src="assets/images/mySkillText.png">
+            <img id="mySkill" src="assets/images/mySkillText.png">
 
             <section>
                 <div>
@@ -218,7 +218,7 @@
         </section>
 
         <section id="section05">
-            <h1>Gallery</h1>
+            <h1 id="gallery">Gallery</h1>
             <section>
                 <img src="assets/images/poto1.png">
 
@@ -238,7 +238,7 @@
         </section>
 
         <section id="section06">
-            <img src="assets/images/meetMy_Project.png">
+            <img id="myProjects" src="assets/images/meetMy_Project.png">
             <section>
                 <div>
                     <img usemap="#myMap03" src="assets/images/application_Development.png">
@@ -255,7 +255,7 @@
         </section>
 
         <section id="section07">
-            <h1>Contact me</h1>
+            <h1 id="contact">Contact me</h1>
 
             <section>
                 <h2>Quick Support</h2>
@@ -312,11 +312,11 @@
         <nav id="nav02">
             <ul>
                 <li><i class="fa-solid fa-house"></i> <a href="#"> Home</a> </li>
-                <li><i class="fa-brands fa-servicestack"></i> <a href="#"> About </a></li>
-                <li><i class="fa-solid fa-address-book"></i> <a href="#"> Education </a></li>
-                <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Gallery </a></li>
-                <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Projects</a></li>
-                <li><i class="fa-solid fa-circle-info"></i> <a href="#"> Contact </a></li>
+                <li><i class="fa-brands fa-servicestack"></i> <a href="#whoIam"> About </a></li>
+                <li><i class="fa-solid fa-address-book"></i> <a href="#education"> Education </a></li>
+                <li><i class="fa-solid fa-circle-info"></i> <a href="#gallery"> Gallery </a></li>
+                <li><i class="fa-solid fa-circle-info"></i> <a href="#myProjects"> Projects</a></li>
+                <li><i class="fa-solid fa-circle-info"></i> <a href="#contact"> Contact </a></li>
             </ul>
         </nav>
         <div>
