--- a/Assignments/CSS/animation/case4/index.html
+++ b/Assignments/CSS/animation/case4/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="assest/educational-videos.png">
     <title>Animation 04</title>
+    <link rel="stylesheet" href="../../../../assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
     <style>
         body >main >section>section {
             width: 99%;
