--- a/mobileSize.html
+++ b/mobileSize.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <<link rel="stylesheet" href="mobileSize.html">
+    <link rel="stylesheet" href="index.html">
 
-    <style>
-        @media all and (max-width: 320px){
 
-        }
 
-    </style>
 </head>
 <body>
 
