--- a/index.html
+++ b/index.html
@@ -18,15 +18,153 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <style>
-        *{
-            scroll-behavior: smooth;
-        }
-        ::-webkit-scrollbar {
-            width: 0.7vw;
-            background-color: #505253;
-        }
 
-    </style>
+        @media all and (max-width: 320px) {
+            header{
+                background-color: snow;
+                height: 17vw;
+                top: 0;
+                width: 100vw;
+                position: fixed;
+                z-index: 3;
+            }
+            header>img{
+                width: 14vw;
+                margin: 7px;
+                transition-duration: 2s;
+                transition-property: all;
+            }
+            header>nav>ul>li>a{
+                width: 2vw;
+            }
+            header>nav>ul>li>a:hover {
+                width: 3vw;
+                filter: drop-shadow(0 0 1vw black);
+            }
+            header>nav>ul>li {
+                display: inline;
+                margin-right: 20px;
+            }
+            header>nav>ul>li>a{
+                width: 2vw;
+                text-decoration: none;
+                color: #0C1154;
+            }
+            header>nav>ul{
+                width: 82vw;
+                left: 15vw;
+                position: absolute;
+                top: -2vw;
+                right: 14vw;
+            }
+
+
+            body>section:nth-child(2)>div:nth-child(2)>img{
+                left: 7vw;
+                top: 13vw;
+                position: absolute;
+                width: 81vw;
+            }
+            body>section:nth-child(2)>section:nth-child(1){
+                align-items: center;
+                flex-direction: column;
+                width: 60vw;
+            }
+            body>section:nth-child(2)>section:nth-child(1)>img:nth-child(4){
+                top: 72vw;
+                position: relative;
+                width: 40vw;
+            }
+            body>section:nth-child(2)>section:nth-child(1)>h1:nth-child(1){
+                top: 91vw;
+                left: 26vw;
+                position: relative;
+                font-size: 6vw;
+                width: 75vw;
+
+                }
+                body>section:nth-child(2)>section:nth-child(1)>h2:nth-child(2){
+                    top: 90vw;
+                    position: relative;
+                    font-size: smaller;
+                    margin-left: -23vw;
+                    margin-top: 27px;
+                }
+                body>section:nth-child(2)>section:nth-child(1)>div:nth-child(3){
+                    top: 90vw;
+                    position: relative;
+                }
+                body>section:nth-child(2)>section:nth-child(1)>div:nth-child(3)>img{
+                    width: 4vw;
+                }
+
+                body>section:nth-child(2)>section:nth-child(1)>div:nth-child(3)>img:nth-child(3){
+                    width: 3vw;
+                }
+                footer>nav>div{
+                    display: inline;
+                    margin-right: 20px;
+                }
+
+
+                body>section{
+                    background-color: #D9D9D9;
+                }
+
+                body>section:nth-child(2)>nav:nth-child(5){
+                    position: relative;
+                    top: 10px;
+                }
+
+               #whoHeader{
+                   bottom: 104vw;
+                    position: relative;
+                    width: 34vw;
+                }
+            body>section:nth-child(3){
+                position: relative;
+            }
+            body>section:nth-child(3)>section:nth-child(2){
+                width: auto;
+                display: inline-block;
+                position: relative;
+                left: 10vw;
+                top: 2vh;
+            }
+            body>section:nth-child(3)>img{
+                left: 10vw;
+                width: 81vw;
+                position: relative;
+                top: 25vw;
+            }
+            body>section:nth-child(3)>section:nth-child(2)>h1{
+                display: inline-block;
+            }
+            body>section:nth-child(3)>section:nth-child(2)>p{
+                display: inline-block;
+            }
+            body>section:nth-child(3)>img:nth-child(3){
+                top: -20vw;
+                left: 35vw;
+                width: 64vw;
+                position: relative;
+
+                }
+                body>section:nth-child(3)>section:nth-child(2)>pre{
+                    top: 4vw;
+                    right: 19vw;
+                    position: relative;
+                    font-size: 10px;
+                    font-family: Roboto Serif;
+                }
+                #section02{
+                    height: 145vh;
+                }
+                #cv{
+                    width: 33vw;
+                }
+                }
+</style>
 
 </head>
 <body>
@@ -79,7 +217,7 @@
 
             <pre style="font-family: Roboto Serif">
 
-                <img  src="assets/images/who_Im_text.png">
+                <img  id="whoHeader" src="assets/images/who_Im_text.png">
 
                 I am Dilshan. A student of Graduate Diploma in Software Engineering
 
@@ -104,7 +242,7 @@
 
                 Degree : Undergraduate
 
-                <img src="assets/images/downloadCv.png">
+                <img id="cv" src="assets/images/downloadCv.png">
 
                 </pre>
             </section>
