--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 }
 
                #whoHeader{
+                   left: 23vw;
                    bottom: 104vw;
                     position: relative;
                     width: 34vw;
@@ -163,7 +164,138 @@
                 #cv{
                     width: 33vw;
                 }
+
+                #section03{
+                    height: 200vh;
                 }
+            body>section:nth-child(4)>div{
+                display: flex;
+            }
+            .rectangle{
+                top: 42vw;
+                left: -26vw;
+                position: relative;
+                border: 2px solid black;
+                background-color: #BBADAD;
+                border-radius: 20px;
+            }
+
+            body>section:nth-child(4)>div:nth-child(3){
+                width: 122vw;
+                justify-content: right;
+
+            }
+            body>section:nth-child(4)>div:nth-child(4){
+                left: -17vw;
+                position: relative;
+                width: 138vw;
+                justify-content: center;
+                margin-top: 48px;
+
+            }
+            body>section:nth-child(4)>div:nth-child(5){
+                position: relative;
+                top: 50px;
+                margin-left: 60px;
+                justify-content: start;
+
+            }
+            body>section:nth-child(4)>div:nth-child(3)>img{
+                top: 5vw;
+                left: 35vw;
+                position: relative;
+                height: 30vw;
+                width: 30vw;
+                border-radius: 20px;
+
+            }
+            body>section:nth-child(4)>div:nth-child(4)>img{
+                top: 33vw;
+                left: 48vw;
+                position: relative;
+                height: 23vh;
+                width: 36vw;
+                border-radius: 20px;
+                margin-right: 40px;
+
+            }
+            body>section:nth-child(4)>div:nth-child(5)>img{
+                border-radius: 20px;
+                margin-right: 40px;
+            }
+            body>section:nth-child(4)>img:nth-child(2){
+                top: 12vw;
+                left: 15vw;
+                position: relative;
+                width: 34vw;
+            }
+
+            body>section:nth-child(4)>div{
+                display: flex;
+            }
+
+            body>section:nth-child(4)>div:nth-child(3){
+                justify-content: right;
+                margin-right: 50px;
+
+            }
+            body>section:nth-child(4)>div:nth-child(4){
+                justify-content: center;
+                margin-top: 50px;
+
+            }
+            body>section:nth-child(4)>div:nth-child(5){
+                width: 137vw;
+                position: relative;
+                top: 99vw;
+                margin-left: 60px;
+                justify-content: start;
+                }
+
+                body>section:nth-child(4)>div:nth-child(5)>img{
+                    position: relative;
+                    width: 34vw;
+                    border-radius: 20px;
+                    margin-right: 40px;
+                    height: 24vh;
+                    left: 14vw;
+                }
+                body>section:nth-child(4)>img:nth-child(2){
+                    left: -8vw;
+                    top: 8vw;
+                    position: relative;
+                    width: 34vw;
+                    margin-bottom: 3vw;
+                    padding-left: 42vw;
+                }
+                body>section:nth-child(4)>img:nth-child(1){
+                    top: 25vw;
+                    position: absolute;
+                    width: 20vw;
+                }
+                body>section:nth-child(4)>img:nth-child(6){
+                    width: 12vw;
+                    position: absolute;
+                    bottom: 0;
+                    right: 0vw;
+                }
+                
+                body>section:nth-child(4)>img:nth-child(6){
+                    width: 10vw;
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                }
+                body>section:nth-child(4)>div:nth-child(4)>div:nth-child(2){
+                    position: relative;
+                    top: 86vw;
+                }
+            body>section:nth-child(4)>div:nth-child(5)>div:nth-child(2){
+                position: relative;
+                top: 51vw;
+                left: -59vw;
+            }
+            }
 </style>
 
 </head>
@@ -263,6 +395,7 @@
                     </hgroup>
                 </div>
             </div>
+
 
             <div>
                 <img src="assets/images/CFTLlogo.png">
