My skills update to responsive

--- a/index.html
+++ b/index.html
@@ -295,7 +295,40 @@
                 top: 51vw;
                 left: -59vw;
             }
+
+
+
+            #section4{
+                height: 100vh;
             }
+            body>section:nth-child(5){
+                position: relative;
+            }
+            body>section:nth-child(5){
+                background-color: #0C1154;
+            }
+            body>section:nth-child(5)>div{
+                display: inline;
+                padding-left: 13px;
+                top: 20px ;
+            }
+            body>section:nth-child(5)>img:nth-child(1){
+                top: 8vw;
+                width: 52vw;
+                position: relative;
+                left: 13vw;
+            }
+            body>section:nth-child(5)>section:nth-child(2)>div{
+                display: inline;
+                top: 20vh;
+                padding-left: 15px;
+            }
+            body>section:nth-child(5)>section:nth-child(2){
+                padding-left: 7vw;
+                padding-top: 12vh;
+            }
+
+        }
 </style>
 
 </head>
