Gallery update to mobile size responsive

--- a/index.html
+++ b/index.html
@@ -328,6 +328,71 @@
                 padding-top: 12vh;
             }
 
+            #section05{
+                margin-top: -7vw;
+                position: relative;
+                right: 0;
+                left: 0;
+                height: 221vh;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(2){
+                top: 3vw;
+                height: 35vh;
+                position: relative;
+                left: 5vw;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(3){
+                left: 6vw;
+                position: relative;
+                width: 49vw;
+                top: 3vw;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(4){
+                left: 5vw;
+                width: 44vw;
+                position: relative;
+                top: 4vw;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(5){
+                position: relative;
+                width: 95vw;
+                left: 3vw;
+                top: 4vw;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(6){
+                width: 37vw;
+                position: relative;
+                top: -13vw;
+                left: 4vw;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(7){
+                height: 23vh;
+                left: 5vw;
+                position: relative;
+                width: 55vw;
+                border-radius: 10px;
+            }
+
+            body>section:nth-child(6)>section:nth-child(1){
+                position: relative;
+                right: 0;
+                left: 0;
+                height: 100vh;
+            }
+            body>section:nth-child(6)>section:nth-child(2)>img:nth-child(1){
+                width: 88vw;
+                position: relative;
+                left: 6vw;
+            }
+
+            #gallery{
+                left: 35vw;
+                position: relative;
+                font-size: 2em;
+                margin: 0.67em 0;
+            }
+
+
         }
 </style>
 
