--- a/index.html
+++ b/index.html
@@ -393,6 +393,245 @@
             }
 
 
+            #section06{
+                height: 226vh;
+            }
+            body>section:nth-child(7)>section:nth-child(2)>div{
+                display: inline;
+                position: relative;
+                padding-left: 20px;
+                padding-top: 20px;
+            }
+            body>section:nth-child(7)>img:nth-child(1){
+                width: 77vw;
+                position: relative;
+                left: 6vw;
+
+            }
+            body>section:nth-child(7)>section:nth-child(2)>div:nth-child(1)>img{
+                width: 80vw;
+                position: relative;
+                top: 7vw;
+            }
+            body>section:nth-child(7)>section:nth-child(2)>div:nth-child(2)>img{
+                width: 80vw;
+                position: relative;
+                top: 7vw;
+            }
+            body>section:nth-child(7)>section:nth-child(2)>div:nth-child(3)>img{
+                width: 80vw;
+                position: relative;
+                top: 7vw;
+            }
+
+
+            body>section:nth-child(8)>section:nth-child(2){
+                background-color: #625D5D;
+                display: inline-block;
+            }
+
+
+            #section07{
+                height: 215vh;
+                margin-top: -7vw;
+            }
+            body>section:nth-child(8)>section:nth-child(3)>form{
+                position: relative;
+                width: 70vw;
+                height: 68vh;
+                border-radius: 5%;
+            }
+            body>section:nth-child(8)>section:nth-child(3){
+                background-color: #625D5D;
+                display: inline-block;
+                border-radius: 10%;
+                position: relative;
+                width: 88vw;
+                height: 88vh;
+                bottom: -5vh;
+                left: 10px;
+            }
+            body>section:nth-child(8)>section:nth-child(2){
+                top: 3vw;
+                width: 89vw;
+                height: 103vh;
+                border-radius: 10%;
+                position: relative;
+                left: 4vw;
+            }
+            #nav01{
+                margin-left: 30vw;
+            }
+            .txtfeaild{
+                position: relative;
+                left: 3vw;
+                width: 77vw;
+                height: 70px;
+                border-radius: 20px;
+            }
+            #textArea{
+                position: relative;
+                left: 3vw;
+                border-radius: 20px;
+                width: 77vw;
+                height: 150px;
+            }
+            #btnSubmit{
+                bottom: 5vw;
+                position: relative;
+                left: 8vw;
+                width: 67vw;
+                height: 10vh;
+                border-radius: 20px;
+                background-color: #0C1154;
+                color: #aacccc;
+                font-weight: bolder;
+            }
+            body>section:nth-child(8)>section:nth-child(2)>div{
+                width: 51vw;
+                position: relative;
+                left: 14vw;
+            }
+            body>section:nth-child(8)>section:nth-child(2)>h2:nth-child(1){
+                position: relative;
+                left: 3vw;
+            }
+            body>section:nth-child(8)>section:nth-child(3)>form>h2{
+                margin-left: 20vw;
+            }
+            #contact{
+                color: #0C1154;
+                font-style: initial;
+                position: relative;
+                left: 22vw;
+                top: 5vw;
+            }
+
+
+            footer>nav>ul>li {
+                display: inline;
+                margin-right: 3px;
+            }
+            footer>nav>ul>li>a{
+                text-decoration: none;
+                color: whitesmoke;
+            }
+            footer>nav:nth-child(2)>ul{
+                position: absolute;
+                bottom: 5px;
+                right: 40vw;
+
+            }
+            footer{
+                background-color: #14213D;
+                position: relative;
+                left: 0;
+                right: 0;
+                height: 91vw;
+            }
+            footer>div:nth-child(4)>small{
+                position: absolute;
+                bottom: 0;
+                left: 30vw;
+                color: whitesmoke;
+            }
+            .vector{
+                height: 20vh;
+            }
+            footer>div:nth-child(2){
+                position: absolute;
+                bottom: 0;
+                right: 0;
+            }
+            footer>div:nth-child(2)>img{
+                width: 14vw;
+                height: 21vh;
+                position: relative;
+                top: 2vw;
+            }
+            footer>div:nth-child(6)>img{
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 14vh;
+            }
+            #nav01{
+                position: absolute;
+                top: 6vw;
+                right: 0;
+                left: 0;
+                bottom: 0;
+            }
+            #nav02{
+                position: absolute;
+                left: 28vw;
+                bottom: 2vw;
+            }
+            footer>div:nth-child(5){
+                position: absolute;
+                font-size: 10px;
+                bottom: 21vw;
+                left: 10vw;
+                color: whitesmoke;
+            }
+            footer>h2:nth-child(1){
+                color: whitesmoke;
+                font-family: Mandali;
+                font-size: 9vw;
+                font-weight: bold;
+                position: absolute;
+                display: inline-block;
+                top: 7vw;
+                left: 34vw;
+            }
+            footer>nav:nth-child(3)>div:nth-child(1)>img{
+                top: 21vw;
+                position: relative;
+                width: 20vw;
+                display: inline;
+                left: -22vw;
+            }
+            footer>nav:nth-child(3)>div:nth-child(2)>img{
+                left: -28vw;
+                position: relative;
+                display: inline;
+                width: 18vw;
+                top: 20vw;
+            }
+            footer>nav:nth-child(3)>div:nth-child(3)>img{
+                left: 22vw;
+                display: inline;
+                position: relative;
+                width: 20vw;
+            }
+            footer>nav:nth-child(3)>div:nth-child(4)>img{
+                position: relative;
+                display: inline;
+                width: 20vw;
+                left: 17vw;
+            }
+            footer>nav:nth-child(4)>ul{
+                left: -33vw;
+                bottom: 25vw;
+                position: relative;
+                font-size: 4vw;
+                display: inline;
+            }
+            footer>nav:nth-child(4)>ul>li>:nth-child(4){
+                position: relative;
+                left: 1vw;
+                bottom: 0vw;
+            }
+            footer>nav:nth-child(4)>ul>li:nth-child(5){
+                bottom: 5.8vw;
+                position: relative;
+                left: 70vw;
+            }
+            footer>nav:nth-child(4)>ul>li:nth-child(6){
+                top: -5.6vw;
+                position: relative;
+                left: 71vw;
+            }
         }
 </style>
 
